Table result adjust

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-project.IOWorkUtil=C:\\Users\\mbecker\\Documents\\GitHub\\IOWorkUtil
-user.properties.file=C:\\Users\\mbecker\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
+user.properties.file=C:\\Users\\Marcus Becker\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
